data/derived/fa15/progs/unify/prog1952.ml.out
Characters 91-99:
  else bigAdd [l] [(mulByDigit(i-1, l))];;
                              ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
